frontend/test/should_pass/exectype_InSetmap.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int>=set<int>{} && y:int=3 && y in x
			|| u:map<H,AA>=map<H,AA>{} && v:HH=varia && v in u);
	}
}