frontend/test/should_fail/exectype_InSetmap5.grg
using exectype;

rule r
{
	modify  {
		exec(u:map<HH,string> =map<HH,string> && v:H=varia && v in u);
	}
}